objects/AttendeeSummary__c.object
<CustomObject>
    <fields>
        <fullName>As_NAICSCode_3__c</fullName>
        <label>NAICSCode3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Tax/Audit, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, 541810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits, 923130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Projects, 541330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash for Keys, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering/Food/Vending, 722320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Services, 561440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Printing, 323111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services, 541690</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Services, 561450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labor, 561110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Corporate Facilities &amp; Services, 238210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities - Real Estate, 531190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services, 541211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure &amp; Bankruptcy Services, 531320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Office Supplies, 333293</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative - Postage &amp; Courier, 492110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Data Services, 518210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Hardware, 332510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Software, 511210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Telecom - Telecom, 517110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Firms, 922130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan and Mortgage Services, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Processing, 522310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research, 541910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Commercial Printing, 323111</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_SecondaryBusinessCategory1__c</fullName>
        <label>SecondaryBusinessCategory1</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Oil &amp; Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Rental &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies &amp; Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative &amp; Support &amp; Waste Management &amp; Remediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations &amp; Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services not related to Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pubic Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial / Insurance Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Shipping_Country__c</fullName>
        <label>Shipping_Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Shipping_States__c</fullName>
        <label>Shipping_States</label>
        <picklist>
            <controllingField>As_Shipping_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_SuffixNew__c</fullName>
        <label>SuffixNew</label>
        <picklist>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_prefixNew__c</fullName>
        <label>prefixNew</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBB_Number__c</fullName>
        <description>Field From WEBANC</description>
        <label>BBB Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_type__c</fullName>
        <label>Business type</label>
        <picklist>
            <picklistValues>
                <fullName>MBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gay Lesbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Processed_by_RPO__c</fullName>
        <description>Field From WEBANC EVENT</description>
        <label>Certificate Processed by RPO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_1__c</fullName>
        <label>Commodity_1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artistic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bearings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bindery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Home Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinetry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commodity_2__c</fullName>
        <label>Commodity_2</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artistic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bearings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bindery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Home Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinetry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commodity_3__c</fullName>
        <label>Commodity_3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artistic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bearings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bindery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Home Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinetry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Certifications__c</fullName>
        <label>Company Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Companyhaveafacility_partneroutsideUSA__c</fullName>
        <label>Companyhaveafacility_partneroutsideUSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>Field from WEBANC EVENT</description>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian-Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian-Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Ethnic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Minority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventBriteCount__c</fullName>
        <label>EventBriteCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptional_Key_Words__c</fullName>
        <label>Exceptional Key Words</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exhibitor_company_imageUrl__c</fullName>
        <label>Exhibitor company imageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FetchStatus__c</fullName>
        <formula>IF(isFetched__c == True,&apos;Fetched&apos;,&apos;Not Fetched&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FetchStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>AS_FirstName__c  &amp; &apos; &apos; &amp; AS_LastName__c</formula>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Schedule__c</fullName>
        <label>GSA Schedule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Region__c</fullName>
        <description>WEBANC Field</description>
        <label>Geographical Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufactures_Country__c</fullName>
        <description>Field From WEBANC</description>
        <label>Manufactures Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileCheckInTime__c</fullName>
        <label>MobileCheckInTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References2__c</fullName>
        <label>References2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <description>WEBANC FIELD</description>
        <label>References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_type__c</fullName>
        <label>Registration type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Range__c</fullName>
        <label>Revenue Range</label>
        <picklist>
            <picklistValues>
                <fullName>Under 1 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-25 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-50 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 100 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 500 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 1 Billion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenueupdate__c</fullName>
        <formula>IF(( AS_BusinessRevenue__c &gt;1&amp;&amp;AS_BusinessRevenue__c &lt;=1000000),0,
IF((AS_BusinessRevenue__c&gt;1000000&amp;&amp;AS_BusinessRevenue__c&lt;=5000000 ),1,
IF((AS_BusinessRevenue__c&gt;5000000 &amp;&amp; AS_BusinessRevenue__c&lt;= 10000000),2,
IF((AS_BusinessRevenue__c&gt;10000000 &amp;&amp; AS_BusinessRevenue__c&lt;=50000000),3,
IF((AS_BusinessRevenue__c&gt;50000000 &amp;&amp; AS_BusinessRevenue__c&lt;=100000000),4,
IF((AS_BusinessRevenue__c&gt;100000000),5,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenueupdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work2__c</fullName>
        <label>Scope of Work2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <label>Scope of Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Name__c</fullName>
        <formula>AS_LastName__c  &amp; &apos; &apos; &amp;  AS_FirstName__c</formula>
        <label>TotalName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_in_business__c</fullName>
        <label>Year in business</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 but less than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Youtube_Link__c</fullName>
        <label>Youtube Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biography__c</fullName>
        <label>biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>customer_key__c</fullName>
        <label>customer key</label>
        <referenceTo>Constomer__c</referenceTo>
        <relationshipLabel>AttendeeSummary</relationshipLabel>
        <relationshipName>AttendeeSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>distribution_Country__c</fullName>
        <description>WEBANC Field</description>
        <label>distribution Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFetched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFetched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updateRevenue__c</fullName>
        <label>updateRevenue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>AttendeeSummary</label>
    <nameField>
        <displayFormat>QR_AT_{dd}{yy}_{0000000}</displayFormat>
        <label>AS_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttendeeSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>